--- a/tgui/packages/tgui-panel/styles/goon/chat-light.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-light.scss
@@ -1044,6 +1044,14 @@ h2.alert {
   color: #943d0a;
 }
 
+.asfradio {
+  color: #2a1bb6;
+}
+
+.armradio {
+  color: #037741;
+}
+
 .cmbradio {
   color: #1b748c;
 }
