Radio colour fix

--- a/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
@@ -1012,11 +1012,11 @@ em {
   color: #e3580e;
 }
 
-.asfradio {
+.usasfradio {
   color: #2a1bb6;
 }
 
-.armradio {
+.armyradio {
   color: #037741;
 }
 
