--- a/tgui/packages/tgui-panel/styles/goon/chat-light.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-light.scss
@@ -1044,11 +1044,11 @@ h2.alert {
   color: #943d0a;
 }
 
-.asfradio {
+.usasfradio {
   color: #2a1bb6;
 }
 
-.armradio {
+.armyradio {
   color: #037741;
 }
 
