US Armed Forces update 2; the search for more military-prop variety (#501)

--- a/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
@@ -1012,6 +1012,14 @@ em {
   color: #e3580e;
 }
 
+.usasfradio {
+  color: #2a1bb6;
+}
+
+.armyradio {
+  color: #037741;
+}
+
 .cmbradio {
   color: #1b748c;
 }
