--- a/tgui/packages/tgui/styles/main.scss
+++ b/tgui/packages/tgui/styles/main.scss
@@ -83,6 +83,7 @@
 @include meta.load-css('./interfaces/common/ElectricalPanel.scss');
 @include meta.load-css('./interfaces/TacticalMap.scss');
 @include meta.load-css('./interfaces/StripMenu.scss');
+@include meta.load-css('./interfaces/Minesweeper.scss');
 
 // Layouts
 @include meta.load-css('./layouts/Layout.scss');
