French and Filipino

--- a/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
@@ -1411,6 +1411,14 @@ em {
   color: #974c0e;
 }
 
+.french {
+  color: #1b3272;
+}
+
+.filipino {
+  color: #551d6e;
+}
+
 .japanese {
   color: #940927;
 }
