--- a/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
@@ -1000,6 +1000,10 @@ em {
   color: #fe9b24;
 }
 
+.guardradio {
+  color: #62a759;
+}
+
 .pmcradio {
   color: #4dc5ce;
 }
@@ -1408,15 +1412,15 @@ em {
 }
 
 .portuguese {
-  color: #974c0e;
+  color: #b3692e;
 }
 
 .french {
-  color: #1b3272;
+  color: #375096;
 }
 
 .filipino {
-  color: #551d6e;
+  color: #8d47ad;
 }
 
 .japanese {
