--- a/tgui/packages/tgui-panel/styles/goon/chat-light.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-light.scss
@@ -1036,6 +1036,10 @@ h2.alert {
   color: #fe9b24;
 }
 
+.guardradio {
+  color: #214e1b;
+}
+
 .pmcradio {
   color: #136957;
 }
@@ -1440,7 +1444,13 @@ h2.alert {
 .japanese {
   color: #940927;
 }
+.french {
+  color: #152655;
+}
 
+.filipino {
+  color: #541a6e;
+}
 .chinese {
   color: #fe1919;
 }
